# dp-recorder

./: .gitignore  .pre-commit-config.yaml  ARTIFACT_APPENDIX.md  Dockerfile  LICENSE  README.md  artifact_appendix.md  pyproject.toml
.github/workflows/: lint.yaml  tests.yaml
src/agent_audit/: __init__.py
src/agent_audit/auditing/: __init__.py  audit_primitives.py  dataset_util.py  metrics.py  pld_from_epsilon_delta.py  privacy_converter.py
src/agent_audit/visualization/: __init__.py  visualization.py
src/dp_recorder/: __init__.py
src/dp_recorder/auditing/: __init__.py  audit_primitives.py  dataset_util.py  privacy_converter.py
src/dp_recorder/visualization/: __init__.py  visualization.py
tests/: conftest.py  laplace_mechanism.py  test_buggy_private_mean.py  test_correct_mechanism.py  test_domain_inference.py  test_double_spending.py  test_fixture_verification.py  test_instrumented.py  test_nan_injection.py  test_noise_miscalibration.py  test_sensitivity_miscalibration.py
tests/audit_harness/: Dockerfile  README.md  monitor.py  report.py  run_all.sh  run_manifest.sh  runner.py
tests/audit_harness/manifests/: dpmm.json  mbi.json  synthcity.json
tests/audit_harness/results/: synthcity.json  synthcity.xml
tests/example_library_instrumented/: audited_algorithm.py  mechanisms.py
tests/example_library_monkeypatched/: audited_algorithm.py  mechanisms.py
