[tool.poetry]
name = "agent_audit"
version = "0.1.0"
description = "agent helper library for auditing privacy mechanisms"
authors = ["Oblivious Devs <dev@oblivious.com>"]
readme = "README.md"
packages = [{include = "agent_audit", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = ">=1.20.0"
pandas = ">=1.5.0"
scipy = ">=1.10.0"
scikit-learn = ">=1.2.0"
tqdm = "^4.66.0"
matplotlib = "^3.7.0"
seaborn = "^0.13.0"
graphviz = "^0.20.0"
dp-accounting = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
pytest-cov = "^6.2.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
